--- a/client/sass/components/_launcher.scss
+++ b/client/sass/components/_launcher.scss
@@ -13,6 +13,8 @@
   height: 56px;
   left: auto;
   line-height: 56px;
+  margin-left: auto;
+  margin-top: auto;
   pointer-events: auto;
   position: fixed !important;
   right: 8px;
